# english_dict

dictionary/: A1.txt  A2.txt  B2.txt  C1.txt  CMakeLists.txt  defs.c  dict_lib.c  main.c
dictionary/levels/: A1.txt  A2.txt  A3.txt  B1.txt  B2.txt  C1.txt
